# tic-tac-chec

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  railway.json
.github/workflows/: ci.yml
research/: drawing-witness.md  findings.md  hosted-explorer.md  publisher-outreach.md  rules.md  solver-architecture.md  state-space.md  threat-census.json  threat-census.md
research/runs/edge-2026-07-13/: summary.md
research/runs/outbound-only-2026-07-13/: summary.md  variant-comparison.md
research/runs/parallel-retrograde-2026-07-13/: summary.md
research/runs/predecessor-2026-07-13/: summary.md
research/runs/production-2026-07-13/: drawing-witness.json  strategic-report.md  summary.md
research/runs/rank-2026-07-13/: summary.md
research/runs/retrograde-rehearsal-2026-07-13/: summary.md
research/runs/table-2026-07-13/: summary.md
solver/: Cargo.toml
solver/src/: checkpoint.rs  compact.rs  graph.rs  lib.rs  opening.rs  parallel.rs  probe.rs  ranking.rs  remoteness.rs  retrograde.rs  tablebase.rs  threat.rs
solver/web/: index.html  write-up.html
solver/web/pieces/: CREDITS.md
